--- a/.env
+++ b/.env
@@ -17,10 +17,10 @@ BASE_THEME=dark
 dgHomeLink=true
 dgPassFrontmatter=false
 dgShowBacklinks=true
-dgShowLocalGraph=true
+dgShowLocalGraph=false
 dgShowInlineTitle=false
 dgShowFileTree=true
-dgEnableSearch=true
+dgEnableSearch=false
 dgShowToc=true
 dgLinkPreview=true
 dgShowTags=false
