--- a/.env
+++ b/.env
@@ -17,8 +17,8 @@ BASE_THEME=dark
 dgHomeLink=true
 dgPassFrontmatter=false
 dgShowBacklinks=true
-dgShowLocalGraph=false
-dgShowInlineTitle=false
+dgShowLocalGraph=true
+dgShowInlineTitle=true
 dgShowFileTree=true
 dgEnableSearch=false
 dgShowToc=true
