--- a/.github/workflows/check-dependecies.yml
+++ b/.github/workflows/check-dependecies.yml
@@ -1,10 +1,7 @@
 name: Check for Outdated Dependencies
 
 on:
-  push:
-    branches:
-      - main
-  pull_request:
+  workflow_dispatch:
 
 jobs:
   check-outdated:
