--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node-version: [20.x]
+        node-version: [20.9.0]  # Specify a minor version
     steps:
       - uses: actions/checkout@v4
       - name: Use Node.js ${{ matrix.node-version }}
@@ -30,3 +30,7 @@ jobs:
       - run: npm run build --if-present
       - name: Run Tests
         run: npm test
+      - name: Print Node.js version
+        run: node -v  # Add this to confirm the Node.js version
+      - name: Print npm version
+        run: npm -v  # Add this to confirm the npm version
