--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,3 +1,6 @@
+# This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
+# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-nodejs
+
 name: Check for any build error
 
 on:
@@ -12,6 +15,7 @@ jobs:
     strategy:
       matrix:
         node-version: [20.x]
+        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
       - uses: actions/checkout@v4
@@ -26,8 +30,10 @@ jobs:
         run: |
           npm audit --production --omit=dev || echo "Audit failed, but continuing build."
       - name: Print audit results
-        if: steps.npm_audit.outcome == 'failure'
-        run: echo "Warning: Audit found vulnerabilities, but build will continue."
+        run: |
+          if [ "${{ steps.npm_audit.outcome }}" == "failure" ]; then
+            echo "Warning: Audit found vulnerabilities, but build will continue."
+          fi
       - name: Run npm audit fix
         run: npm audit fix || echo "npm audit fix failed, but continuing build."
       - name: Run build
